# dbly

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/ci/: README.md  bitbucket-pipelines.yml  github-actions.yml
src/dbly/: __init__.py  cli.py  config.py  drift.py  engine.py  hooks.py  initializer.py  model.py  parsing.py  planner.py  repo.py  report.py
src/dbly/adapters/: __init__.py  base.py  mssql.py  oracle.py  postgres.py  sqlite.py
tests/: test_integration.py  test_mssql.py  test_mssql_e2e.py  test_oracle.py  test_oracle_e2e.py  test_parsing.py
