[project]
name = "dbly"
version = "0.2.0"
description = "State-based, cross-engine database deployment — git-driven, parser-assisted, SQL-first."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jürgen Zornig", email = "info@angrydata.info" }
]
requires-python = ">=3.12"
keywords = [
    "database",
    "deployment",
    "migration",
    "state-based",
    "schema",
    "postgres",
    "oracle",
    "sqlserver",
    "sqlite",
    "sql",
    "git",
    "ci-cd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "sqlglot>=25.0",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
mssql = ["pymssql>=2.3"]
all = ["oracledb>=2.0", "pymssql>=2.3"]

[project.urls]
Homepage = "https://angrydata.info/dbly"
Repository = "https://github.com/angrydat/dbly"
Issues = "https://github.com/angrydat/dbly/issues"
Changelog = "https://github.com/angrydat/dbly/blob/main/CHANGELOG.md"

[project.scripts]
dbly = "dbly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbly"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
